--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ body {
 
 .offline {
   padding-top: 80px;
-  max-height: 100svh;
+  max-height: 100dvh;
   display: flex;
   flex-direction: column;
   position: relative;
