--- a/scss/sections/offline.scss
+++ b/scss/sections/offline.scss
@@ -1,6 +1,6 @@
 .offline {
   padding-top: 80px;
-  max-height: 100svh;
+  max-height: 100dvh;
   display: flex;
   flex-direction: column;
   position: relative;
