--- a/scss/sections/cta.scss
+++ b/scss/sections/cta.scss
@@ -1,5 +1,5 @@
 .cta {
-  border: 8px solid var(--color-accent);
+  border: 8px solid var(--accent-color);
   padding: 36px 0 70px 50px;
 
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.83) 50%),
