add animations for scroll btn

--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,21 @@ button {
   text-transform: uppercase;
 }
 
+.bounce {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-100%);
+  }
+  60% {
+    transform: translateY(-50%);
+  }
+}
 body {
   background: var(--dark-color);
 }
