--- a/scss/sections/hero.scss
+++ b/scss/sections/hero.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   background: linear-gradient(0, var(--dark-color-50), var(--dark-color-50)),
-              url("../img/hero-bg.webp") center no-repeat;
+              url("../img/hero-bg.webp") center / cover no-repeat;
 
   &__title {
     margin-bottom: 10px;
