--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ body {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  background: linear-gradient(0, var(--dark-color-50), var(--dark-color-50)), url("../img/hero-bg.webp") center no-repeat;
+  background: linear-gradient(0, var(--dark-color-50), var(--dark-color-50)), url("../img/hero-bg.webp") center/cover no-repeat;
 }
 .hero__title {
   margin-bottom: 10px;
